--- a/src/components/ui/Card.css
+++ b/src/components/ui/Card.css
@@ -1,8 +1,7 @@
 .card {
-  background-color: rgb(248, 247, 231);
-  /* border-radius: 6px; */
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
-  /* color: rgb(40, 44, 52); */
+  background-color: #343842;
+  color: rgb(247, 248, 251);
   border: solid 3px white;
   border-radius: 15px;
   margin: 1rem;
